// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MdInput Component Should change value of testBtnOnClick upon click 1`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle btn btn-none"
      type="button"
    >
      Admin
    </button>
    <div
      aria-labelledby=""
      class="dropdown-menu"
      style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none; margin: 0px;"
      x-placement="bottom-start"
    >
      <button
        class="dropdown-item"
        href="/admin/lessons"
      >
        Lessons
      </button>
      <div
        class="dropdown-divider"
        role="separator"
      />
      <button
        class="dropdown-item"
        href="/admin/users"
      >
        Users
      </button>
      <button
        class="dropdown-item"
        href="/admin/alerts"
      >
        Alerts
      </button>
    </div>
  </div>
</div>
`;

exports[`MdInput Component Should render divider when an item is null 1`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle btn btn-none"
      type="button"
    >
      Admin
    </button>
  </div>
</div>
`;
